tests/compile-fail/suzu_from_multiple_fields.stderr
error: multiple #[suzu(from)] fields; only one source field is allowed per struct/variant
  --> tests/compile-fail/suzu_from_multiple_fields.rs:24:5
   |
24 |     #[suzu(from)]
   |     ^

error: first #[suzu(from)] defined here
  --> tests/compile-fail/suzu_from_multiple_fields.rs:22:5
   |
22 |     #[suzu(from)]
   |     ^
